ajout de fonctions pour simuler un move et calculer les possibilités

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,12 @@
-compile.on.save=true
-user.properties.file=C:\\Users\\.Sylvain\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+#AJ Property
+#Wed Apr 20 16:09:36 EDT 2016
+compile.on.save=false
+#AJ Property
+#Wed Apr 20 16:09:36 EDT 2016
+do.depend=false
+#AJ Property
+#Wed Apr 20 16:09:36 EDT 2016
+do.jar=true
+#AJ Property
+#Wed Apr 20 16:09:36 EDT 2016
+javac.debug=true
