--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -10,3 +10,4 @@ do.jar=true
 #AJ Property
 #Wed Apr 20 16:09:36 EDT 2016
 javac.debug=true
+user.properties.file=C:\\Users\\.Sylvain\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
